--- a/html/index.html
+++ b/html/index.html
@@ -16,26 +16,26 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="checkout">
+    <div class="co">
       <header>
-        <div class="checkout__header__checkout">Checkout</div>
+        <div class="co-header-co">Checkout</div>
         <p>
-          <span class="checkout__shopping">Shopping</span>
+          <span class="shopping">Shopping</span>
 
-          <span class="checkout__payment">Payment Method</span>
+          <span class="payment">Payment Method</span>
 
-          <span class="checkout__confirmation">Confirmation</span>
+          <span class="confirmation">Confirmation</span>
         </p>
-        <div class="checkout__close-btn">
+        <div class="co-close-btn">
           <i class="fa fa-window-close"></i>
         </div>
       </header>
       <content>
-        <section class="checkout__payment-block">
-          <section class="wallet">
+        <section class="co-payment">
+          <section class="wallet-container">
             <p>Wallet</p>
             <hr />
-            <div class="wallet__images">
+            <div class="wallet-images">
               <div>
                 <img src="./images/cards/discover.png" alt="discover" />
                 <p>Ending with 8899</p>
@@ -57,7 +57,7 @@
               <form class="new-card-form">
                 <input type="text" placeholder="Name on Card" />
                 <input type="number" placeholder="xxxx-xxxx-xxxx-xxxx" />
-                <div class="new-card__cvv">
+                <div class="new-card-cvv">
                   <input type="text" placeholder="MM/YY" />
                   <input type="number" placeholder="CVV" />
                 </div>
@@ -67,7 +67,7 @@
             </div>
           </section>
         </section>
-        <section class="checkout__cart-block">
+        <section class="co-cart">
           <section class="products">
             <div class="products-img-details">
               <img
@@ -75,11 +75,11 @@
                 alt="mobile holder"
               />
               <div class="product-details">
-                <div class="product-details__name-price">
+                <div class="product-details-name-price">
                   <span>Mobile Holder</span>
                   <span>$ 10.00</span>
                 </div>
-                <div class="product-details__color-quantity">
+                <div class="product-details-color-quantity">
                   <p>Black</p>
                   <p>Quantity: 1</p>
                 </div>
@@ -89,11 +89,11 @@
             <div class="products-img-details">
               <img src="./images/products/rado.jpg" alt="mobile holder" />
               <div class="product-details">
-                <div class="product-details__name-price">
+                <div class="product-details-name-price">
                   <span>Rado Watch</span>
                   <span>$ 10.00</span>
                 </div>
-                <div class="product-details__color-quantity">
+                <div class="product-details-color-quantity">
                   <p>Black</p>
                   <p>Quantity: 1</p>
                 </div>
@@ -106,11 +106,11 @@
                 alt="mobile holder"
               />
               <div class="product-details">
-                <div class="product-details__name-price">
+                <div class="product-details-name-price">
                   <span>C type to Micro Converter</span>
                   <span>$ 10.00</span>
                 </div>
-                <div class="product-details__color-quantity">
+                <div class="product-details-color-quantity">
                   <p>Black</p>
                   <p>Quantity: 1</p>
                 </div>
@@ -120,11 +120,11 @@
             <div class="products-img-details">
               <img src="./images/products/hard-case.jpg" alt="mobile holder" />
               <div class="product-details">
-                <div class="product-details__name-price">
+                <div class="product-details-name-price">
                   <span>Mobile Case</span>
                   <span>$ 10.00</span>
                 </div>
-                <div class="product-details__color-quantity">
+                <div class="product-details-color-quantity">
                   <p>Black</p>
                   <p>Quantity: 1</p>
                 </div>
@@ -132,7 +132,7 @@
             </div>
           </section>
 
-          <section class="total-block">
+          <section class="total-container">
             <div>
               <span>Sub Total</span>
               <span>$ 100.00</span>
